--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@hookform/resolvers": "^3.1.1",
+    "@hookform/resolvers": "^3.2.0",
     "axios": "^1.4.0",
     "framer-motion": "^10.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-jwt": "^1.2.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
